--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programming Quote Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div id="quote-container">
         <h1 id="quote"></h1>
-        <button id="new-quote">Generate New Quote</button>
+        <button id="new-quote">Generate New Quote</button><br>
+        <br><button id="copy-quote">Copy Quote</button>
     </div>
-  
+
     <script src="script.js"></script>
 </body>
+
 </html>
